--- a/.github/workflows/docker-imagebyAlejo.yml
+++ b/.github/workflows/docker-imagebyAlejo.yml
@@ -1,22 +1,27 @@
 name: Docker Image CI
-on:
-push:
- branches: [ master ]
-pull_request:
-  branches: [ master ]
-jobs:
- build:
- runs-on: ubuntu-latest
- steps:
- - uses: actions/checkout@v4
- - name: docker login
- env:
- DOCKER_USER: ${{secrets.DOCKERHUB_USER}}
- DOCKER_PASS: ${{secrets.DOCKERHUB_PASS}}
- run: |
-   docker login -u $DOCKER_USER -p $DOCKER_PASS
-- name: Build the Docker image
-run: docker build . --file Dockerfile --tag alejoarteh05/tutomicroservices:latest
 
-- name: Docker Push
-run: docker push alejoarteh05/tutomicroservices
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Docker Login
+        env:
+          DOCKER_USER: ${{ secrets.DOCKERHUB_USER }}
+          DOCKER_PASS: ${{ secrets.DOCKERHUB_PASS }}
+        run: |
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
+
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag alejoarteh05/tutomicroservices:latest
+
+      - name: Docker Push
+        run: docker push alejoarteh05/tutomicroservices:latest
