--- a/.github/workflows/docker-imageAlejo.yml
+++ b/.github/workflows/docker-imageAlejo.yml
@@ -17,11 +17,11 @@ jobs:
         env:
           DOCKER_USER: ${{ secrets.DOCKERHUB_USER }}
           DOCKER_PASS: ${{ secrets.DOCKERHUB_PASS }}
-        run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASS
+        run: echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
 
+        
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag alejoarteh05/tutomicroservices:latest
-
+      
       - name: Docker Push
         run: docker push alejoarteh05/tutomicroservices:latest
