--- a/.github/workflows/docker-imageAlejo.yml
+++ b/.github/workflows/docker-imageAlejo.yml
@@ -11,17 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
+      - name: Docker Login
         env:
           DOCKER_USER: ${{ secrets.DOCKERHUB_USER }}
           DOCKER_PASS: ${{ secrets.DOCKERHUB_PASS }}
-        run: echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+        run: |
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
 
-      - name: Build Docker image
-        run: docker build -t alejoarteh05/tutomicroservices:latest .
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag alejoarteh05/tutomicroservices:latest
 
-      - name: Push Docker image
+      - name: Docker Push
         run: docker push alejoarteh05/tutomicroservices:latest
