--- a/.github/workflows/docker-imageAlejo.yml
+++ b/.github/workflows/docker-imageAlejo.yml
@@ -15,10 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Log in to Docker Hub
-        env:
-          DOCKER_USER: ${{ secrets.DOCKERHUB_USER }}
-          DOCKER_PASS: ${{ secrets.DOCKERHUB_PASS }}
-        run: echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+        run: echo "${{ secrets.DOCKERHUB_PASS }}" | docker login -u "${{ secrets.DOCKERHUB_USER }}" --password-stdin
 
       - name: Build Docker image
         run: docker build -t alejoarteh05/tutomicroservices:latest .
